--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -49,12 +49,20 @@ window#waybar {
 #memory,
 #workspaces,
 #tray,
-#backlight {
+#backlight,
+#language {
     background: #1e1e2e;
     padding: 0px 10px;
     margin: 3px 0px;
     margin-top: 5px;
     /* border: 1px solid #181825; */
+}
+
+#language {
+    background: #1e1e2e;
+    border-radius: 10px;
+    padding: 6px 6px;
+    margin-left: 10px;
 }
 
 #backlight {
